fix word too long and line break

--- a/src/component/Asidebar/style.css
+++ b/src/component/Asidebar/style.css
@@ -1,5 +1,4 @@
 .asidebar {
-    height: 100vh;
     overflow: auto;
     width: 270px;
     height: 100vh;
