--- a/src/component/InputMessage/style.css
+++ b/src/component/InputMessage/style.css
@@ -15,9 +15,9 @@
 }
 
 .input-message .btn {
-    line-height: 50px;
+    line-height: 40px;
     color: #737373;
-    height: 50px;
+    height: 40px;
     background: #fff;
     padding: 0 10px;
 }
